--- a/Assets/packages.config
+++ b/Assets/packages.config
@@ -1,10 +1,2 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<packages>
-  <package id="Google.Protobuf" version="3.21.6" />
-  <package id="Grpc" version="2.46.5" />
-  <package id="Grpc.Core" version="2.46.5" />
-  <package id="Grpc.Core.Api" version="2.46.5" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.0.3" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.5.1" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" />
-</packages>
+<packages />
